# agent

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
agent_scheduler/: __init__.py  graph.py  retry.py  state.py  supervisor.py
agent_scheduler/agents/: __init__.py  executor.py  planner.py  validator.py
config/: __init__.py  config.example.yaml  default.yaml  loader.py
core/: __init__.py  exceptions.py  interfaces.py  observability.py  structured_log.py  types.py
docker/: Dockerfile  docker-compose.yml
docs/: 2.py  4天复习计划.md  A2A协议规范与实战.md  AI_Agent_岗位技能图谱.md  Dify平台自定义工具接入指南.md  LangGraph实战指南.md  MCP协议规范与实践.md  Trae接入指南.md  back.py  dify-openapi-schema.json  smoke_test.py  test.py  trae-mcp-config.json  性能优化与跑分.md  架构设计.md  设计决策.md  输入.txt  错误码对照表.md  面试要点汇总.md  面试问答.md  项目架构说明.md
docs/assets/benchmark/: results.json
docs/代码模板/: AI岗代码模板.py  考试急救模板.py
docs/华为真题/: AI岗编程题真题.py
docs/知识点速记手册/: 大模型专项知识点速记.md  选择题高频考点速记.md
docs/简答模板/: 高频简答题答案.md
docs/算法错题本/: 01_链表类易错题.py  02_二叉树类易错题.py  03_动态规划易错题.py  04_回溯与滑动窗口.py
examples/: demo_agent.py  integration_demo.py
mcp_gateway/: __init__.py  api.py  audit.py  protocol.py  security.py  server.py  tenancy.py  transport.py  workspace.py
mcp_gateway/agents/: __init__.py  executor.py  graph.py  planner.py  supervisor.py  validator.py
mcp_gateway/llm/vllm_adapter/: __init__.py  server.py
mcp_gateway/rag/: __init__.py
mcp_gateway/tools/: __init__.py  database.py  filesystem.py  llm.py  terminal.py  web.py
performance/: __init__.py  adapter.py  cache.py  parallel.py
rag/: __init__.py  vector_store.py
requirements/: default.txt  dev.txt  runtime.txt
scripts/: build_exe.py  check_ollama_cpu.py  download_llama_server.ps1  ensure_ollama_cpu.py  fix_docker_mirror.ps1  gen_perf_chart.py  setup_mcp.py  start_all.ps1  start_ollama_cpu.bat  test_ollama_proxy.py
tests/: benchmark.py  generate_charts.py  test_agent.py  test_integration.py  test_mcp.py  test_scenarios.py  test_security.py  verify_imports.py
vllm_adapter/: __init__.py  server.py
