[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mcp-agent-gateway"
version = "1.3.0"
description = "让 AI Agent 直接操控本地环境的 MCP 网关"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "agent", "gateway", "ai", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-username/mcp-agent-gateway"
Source = "https://github.com/your-username/mcp-agent-gateway"

[project.scripts]
mcp-gateway = "main:entry_point"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "docs/*",
    "rag/*",
    "vllm_adapter/*",
    ".github/*",
    "examples/*",
    "main.py",
    "demo.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def health_check",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]